Fix various issues with Docker and deployment scripts.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,8 +1,9 @@
 FROM litaio/ruby
 
 RUN apt-get update && \
-    apt-get -y install python-pip && \
+    apt-get -y --no-install-recommends install nodejs python-pip && \
     pip install awscli && \
+    gem install bundler && \
     apt-get -qy clean autoclean autoremove && \
     rm -rf /var/lib/apt/lists/*
 
