--- a/systemd/deploy-litaio.service
+++ b/systemd/deploy-litaio.service
@@ -8,8 +8,7 @@ After=docker.service
 TimeoutStartSec=0
 Type=OneShot
 RemainAfterExit=yes
-EnvironmentFile=/etc/deploy-litaio/aws_credentials.sh
 ExecStartPre=-/usr/bin/docker kill deploy-litaio
 ExecStartPre=-/usr/bin/docker rm deploy-litaio
-ExecStart=/usr/bin/docker run --name deploy-litaio -e AWS_ACCESS_KEY_ID="$AWS_ACCESS_KEY_ID" -e AWS_SECRET_ACCESS_KEY="$AWS_SECRET_ACCESS_KEY" -v /var/deploy-litaio/bundle:/var/bundle -v /var/deploy-litaio/app:/app deploy-litaio
+ExecStart=/usr/bin/docker run --name deploy-litaio -v /etc/deploy-litaio/aws_credentials:/root/.aws/credentials -v /var/deploy-litaio/bundle:/var/bundle -v /var/deploy-litaio/app:/app litaio/deploy-litaio
 ExecStop=/usr/bin/docker stop deploy-litaio
